# linkdata

./: .gitignore  BUILD_RELEASE.md  FLEXIBLE_IO_SUMMARY.md  README.md  gui_app.py  gui_app.spec  link_lags.py  main.py  pyproject.toml  requirements.txt  setup.py  step0_convert_daily_measures_to_long.py  step0_convert_heat_index_to_long.py  step1_make_n_day_prior_cols_residential_hist_heatDNAm.py  step1_make_n_day_prior_cols_residential_hist_heat_mean_DNAm.py  step1_make_n_day_prior_cols_residential_hist_pm25_o3_DNAm.py  steps_to_run.txt
.github/workflows/: README.md  build-release.yml  draft-pdf.yml
docs/: OPTIMIZATION_GUIDE.md
gui/widgets/: __init__.py
icons/: Icon.icns
linkdata/: __init__.py  daily_measure.py  heat_index.py  hrs.py  io_utils.py  process.py
linkdata/gui/: README.md  __init__.py  main_window.py  validators.py
linkdata/gui/pages/: contextual_data_page.py  execution_page.py  hrs_data_page.py  pipeline_config_page.py  residential_history_page.py
linkdata/gui/widgets/: data_preview_table.py  file_picker.py
paper/: paper.md
scripts/: hook-PyQt6.py  test_update_readme.py  update_readme.py
stitch/: __init__.py  daily_measure.py  process.py
stitch/gui/: README.md  main_window.py  validators.py
stitch/gui/pages/: __init__.py  contextual_data_page.py  execution_page.py  hrs_data_page.py  pipeline_config_page.py
tests/: END_TO_END_TESTS.md  README.md  __init__.py  conftest.py  convert_to_stata.py  data_generators.py  test_end_to_end_linkage.py  test_gui_validators.py  test_gui_widgets.py  test_hrs_data.py  test_hrs_integer_normalization.py  test_hrs_interview_data.py  test_integration.py  test_io.py  test_multicolumn_linkage.py  test_performance_batch_vs_parallel.py  test_performance_no_residential_history.py  test_runner.py
