[project]
name = "linkage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=6.1.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
