[project]
name = "linkage"
version = "0.1.0"
description = "HRS Linkage Tool - Link lagged contextual data to HRS survey data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "psutil>=5.8.0",
    "pyarrow>=10.0.0",
    "pyqt6>=6.4.0",
    "pytest>=7.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
linkage-cli = "link_lags:main"
linkage-gui = "gui_app:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# For GUI tests in headless environments, set: QT_QPA_PLATFORM=offscreen
env = [
    "QT_QPA_PLATFORM=offscreen",
]

[dependency-groups]
dev = [
    "pytest-env>=1.0.0",
    "pytest-qt>=4.0.0",
]
